--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "polkadot-js"
   ],
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "HOST=0.0.0.0 PORT=3000 react-scripts react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "CI=true react-app-rewired test",
     "eject": "react-scripts eject",
